proxy/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: proxy-deployment
 namespace: default
spec:
 replicas: 1
 selector:
  matchLabels:
   name: proxy-deployment
 strategy:
  rollingUpdate:
   maxSurge: 25%
   maxUnavailable: 25%
  type: RollingUpdate
 template:
  metadata:
   labels:
    name: proxy-deployment
  spec:
   serviceAccountName: google-service-account
   containers:
    - image: europe-west1-docker.pkg.dev/emre-aksoy/docker/proxy
      imagePullPolicy: Always
      name: proxy-1
      resources:
       limits:
        cpu: 150m
        memory: "100Mi"
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
