proxy/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
 name: proxy-service
 namespace: default
spec:
 selector:
  name: proxy-deployment
 ports:
  - port: 8080
    targetPort: 8080
