proxy/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: proxy-ingress
 annotations:
  kubernetes.io/ingress.class: nginx
  nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
 tls:
  - hosts:
     - proxy.eaksy.com
    secretName: proxy-eaksy-com-tls
 rules:
  - host: proxy.eaksy.com
    http:
     paths:
      - pathType: Prefix
        path: /
        backend:
         service:
          name: proxy-service
          port:
           number: 8080
